--- a/hi/index.html
+++ b/hi/index.html
@@ -6,7 +6,7 @@
     <title>Lund Mera</title>
 </head>
 <body>
-    <div>'
+    <div>
         <p>FUCKKKKKKKKKKK</p>
         <p>FUCKKKKKKKKKKK</p>
         <p>FUCKKKKKKKKKKK</p>
@@ -35,7 +35,6 @@
         <p>FUCKKKKKKKKKKK</p>
         <p>FUCKKKKKKKKKKK</p>
         <p>FUCKKKKKKKKKKK</p>
-
     </div>
 </body>
 </html>
